<resources>
    <string name="app_name">Eletter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="close">Tutup</string>
    <string name="lihat">Lihat</string>
    <string name="setuju">Setuju</string>
    <string name="nav_home">Belum dibuka</string>
    <string name="nav_sudahdibuka">Sudah dibuka</string>
    <string name="nav_ajukan">Diajukan</string>
    <string name="nav_koreksi">Dikoreksi</string>
    <string name="nav_setuju">Disetujui</string>
    <string name="nav_setuju_lurah">Layanan Mandiri Disetujui</string>
    <string name="nav_kirim">Dikirim</string>
    <string name="nav_telaah">Ditelaah</string>
    <string name="nav_disposisi">Didisposisi</string>
    <string name="nav_dikerjakan">Dikerjakan</string>
    <string name="nav_ditindaklanjuti">Ditindaklanjuti</string>
    <string name="nav_tembusan">Tembusan</string>
    <string name="nav_about">Informasi</string>
    <string name="nav_privasi">Privasi</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_panduan">Panduan</string>
    <string name="nav_keluar">Keluar (Log out)</string>
    <string name="nav_settings">Pengaturan</string>
    <string name="nav_about_us">Informasi</string>
    <string name="nav_inbox">Semua Surat</string>
    <string name="nav_internal">Internal</string>
    <string name="nav_eksternal">Eksternal</string>
    <string name="nav_lainnya">Lainnya</string>
    <string name="ket_ajukan">Melihat surat yang pernah Anda ajukan</string>
    <string name="ket_koreksi">Melihat surat yang pernah Anda koreksi</string>
    <string name="ket_setuju">Melihat surat yang pernah Anda setujui</string>
    <string name="ket_telaah">Melihat surat yang pernah Anda telaah</string>
    <string name="ket_disposisi">Melihat surat yang pernah Anda disposisikan</string>
    <string name="ket_kerjakan">Melihat surat yang pernah Anda kerjakan</string>
    <string name="ket_tindaklanjuti">Melihat surat yang pernah Anda tindak lanjuti</string>
    <string name="ket_tembusan">Melihat surat tembusan yang Anda terima</string>
    <string name="ket_kirim">Melihat surat  yang Anda kirim</string>
    <string name="ket_password">Masukkan kata sandi admin</string>
    <string name="ket_lainnya">Melihat arsip lainnya</string>
    <string name="activity_title_about_us">Informasi</string>
    <string name="activity_title_privacy_policy">Kebijakan Privasi</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Keluar</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="action_pilih_bulan">Pilih Bulan</string>
    <string name="action_panduan">Panduan</string>
    <string name="action_pilih_tanggal">Pilih Tanggal</string>
    <string name="action_search">Cari</string>
    <string name="action_delete">Hapus</string>
    <string name="action_lampiran">Lampiran</string>
    <string name="action_tandatangani">Tandai</string>
    <string name="action_lihat">Lihat</string>
    <string name="action_koreksi">Koreksi</string>
    <string name="action_ubahlangsung">Edit\nLangsung</string>
    <string name="action_tandai">TANDAI</string>
    <string name="action_hilangkan_tandai">BERSIHKAN TANDA</string>
    <string name="action_ajukan">Ajukan</string>
    <string name="action_setuju">Setuju</string>
    <string name="action_arsip">Arsipkan</string>
    <string name="action_kirim">TTE/Kirim</string>
    <string name="action_beritandatangan">Tanda Tangani</string>
    <string name="action_tutup">Tutup</string>
    <string name="action_telaah">Telaah</string>
    <string name="action_disposisi">Disposisi</string>
    <string name="action_tarik">Tarik</string>
    <string name="action_kerjakan">Kerjakan</string>
    <string name="action_tindaklanjuti">TindLanjut</string>
    <string name="action_settings">Pengaturan</string>
    <string name="action_info">Info</string>
    <string name="action_others">Info</string>
    <string name="action_browser">Web Desa</string>
    <string name="action_kembalikan">Telaahkan</string>
    <string name="action_pilih_tindakan">Pilih Tindakan</string>
    <string name="action_lupapassword">Lupa username password</string>
    <string name="action_skip">Lain waktu</string>
    <string name="action_lanjut">Selanjutnya</string>
    <string name="action_download">Unduh</string>
    <string name="action_reload">Reload</string>
    <string name="action_bukaweb">Buka Eletter versi Web</string>
    <string name="title_label_menu_utama">Menu Utama</string>
    <string name="title_activity_welcome">Halaman Utama</string>
    <string name="title_activity_riwayat">Riwayat</string>
    <string name="title_activity_arsip">Arsip</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_lihat">Lihat</string>
    <string name="title_activity_lampiran">Lampiran</string>
    <string name="title_activity_bawahan">Pilih Bawahan</string>
    <string name="title_activity_tindakan">Pilih Tindakan</string>
    <string name="title_activity_buat_surat">Buat Nota Dinas</string>
    <string name="title_activity_ditandai">Konsep Siap Ditandatangani</string>
    <string name="title_pesan">* Wajib memasukkan pesan disposisi di bawah ini.</string>
    <string name="message_tindakan">* Wajib klik minimal salah satu tindakan di bawah ini.</string>
    <string name="message_pilih_bawahan">* Wajib klik minimal salah satu pegawai di bawah ini.</string>
    <string name="message_writefile">Dibutuhkan izin untuk menyimpan file.</string>
    <string name="message_lihatlampiran">Lihat lampiran?</string>
    <string name="message_username_diisi">Kolom username harus diisi</string>
    <string name="message_password_diisi">Kolom password harus diisi</string>
    <string name="message_token_tidakada">Token belum ada</string>
    <string name="message_kurang_parameter">Kurang parameter yang dibutuhkan.</string>
    <string name="next">LANJUT</string>
    <string name="skip">TUTUP</string>
    <string name="start">SELESAI</string>
    <string name="intro_1_title">Login</string>
    <string name="intro_1_desc">Masukkan Username dan Password Anda</string>
    <string name="intro_2_title">Konsep</string>
    <string name="intro_2_desc">Anda akan menerima ajuan konsep surat dari bawahan.</string>
    <string name="intro_3_title">Surat Masuk</string>
    <string name="intro_3_desc">Anda akan menerima surat masuk dan disposisi di menu ini</string>
    <string name="intro_3_desc_staf">Anda akan menerima disposisi di sini</string>
    <string name="intro_4_title">Arsip</string>
    <string name="intro_4_desc">Anda dapat melihat kembali aktivitas pengajuan, pengkoreksian, pendisposisian dan lainnya yang pernah
    Anda lakukan</string>
    <string name="intro_4_desc_desa">Anda dapat melihat kembali aktivitas yang pernah Anda lakukan</string>
    <string name="intro_5_title">Pemberitahuan</string>
    <string name="intro_5_desc">Menampilkan pemberitahuan terkait pengkoreksian surat yang pernah Anda ajukan.</string>
    <string name="intro_6_title">Lainnya</string>
    <string name="intro_6_desc">Profil Anda, informasi tentang aplikasi, dan pintasan Logout.</string>
    <string name="intro_7_title">Detail</string>
    <string name="intro_7_desc">Anda akan melihat detail surat atau konsep, Anda akan melihat tombol preview dan tombol histori</string>
    <string name="intro_8_title">Preview</string>
    <string name="intro_8_desc">Halaman ini menampilkan preview hasil surat atau konsep.</string>
    <string name="intro_9_title">Histori</string>
    <string name="intro_9_desc">Halaman ini menampilkan riwayat surat atau konsep</string>
    <string name="intro_10_title">Notifikasi</string>
    <string name="intro_10_desc">Aplikasi akan memberi notifikasi secara berkala</string>
    <string name="intro_11_title">Pembaruan</string>
    <string name="intro_11_desc">Perbarui aplikasi di Playstore untuk mendapatkan pembaruan fitur</string>
    <string name="intro_12_title">Penandatanganan</string>
    <string name="intro_12_desc">Klik tombol Tanda Tangani di pojok kanan atas dan masukkan passphrase sertifikat elektronik Anda</string>
    <string name="intro_13_title">Web Desa</string>
    <string name="intro_13_desc">Klik tombol Web di halaman utama, Anda akan diarahkan ke website desa Anda</string>
    <string name="intro_14_title">Preview Konsep</string>
    <string name="intro_14_desc">Melihat konsep surat, klik Tanda Tangani untuk menyetujuinya</string>
    <string name="play_again_desc">Untuk melihat kembali, pilih menu samping "Panduan"</string>
    <string name="play_again">Ulangi</string>
    <string name="title_activity_pengaturan">Lainnya</string>
    <string name="pref_title_ringtone">Suara</string>
    <string name="pref_ringtone_silent">Senyap</string>
    <string name="pref_title_notifications">Notifikasi</string>
    <string name="summary_choose_ringtone">Pilih nada</string>
    <string name="pref_header_about">Tentang</string>
    <string name="title_about">Pengembang</string>
    <string name="summary_about">Dinas Komunikasi dan Informatika Pemerintah Kabupaten Kebumen</string>
    <string name="app_version">2.0.26122018</string>
    <string name="title_mitra">Mitra</string>
    <string name="summary_mitra">Balai Sertifikasi Elektronik (BSRE) - BSSN</string>
    <string name="summary_support">Ingin mengirim laporan atau saran terkait aplikasi ini? Kami sangat senang menerimanya!</string>
    <string name="summary_intro">Ulangi intro aplikasi</string>
    <string name="summary_domain">Domain server aplikasi</string>
    <string name="summary_whatsapp">Kontak via Whatsapp</string>
    <string name="summary_riwayat_dev">Melihat riwayat pengembangan aplikasi</string>
    <string name="title_send_feedback">Laporan dan Saran</string>
    <string name="title_intro">Intro</string>
    <string name="title_domain">Domain</string>
    <string name="title_whatsapp">Customer Service</string>
    <string name="title_riwayat_dev">Riwayat Pengembangan Aplikasi</string>
    <string name="title_gantipassword">Ubah Password</string>
    <string name="title_policy">Kebijakan</string>
    <string name="title_other">Lainnya</string>
    <string name="summary_download_book">Silakan klik untuk mendapatkan buku panduan.</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">Pertanyaan yang bisa membantu Anda.</string>
    <string name="url_faq">https://www.eletter.kebumenkab.go.id/faq/</string>
    <string name="url_privacy">https://www.eletter.kebumenkab.go.id/privacy-policy/</string>
    <string name="title_terms">Syarat &amp; Ketentuan</string>
    <string name="url_terms">https://www.eletter.kebumenkab.go.id/terms-of-service/</string>
    <string name="title_version">Versi</string>
    <string name="choose_email_client">Pilih aplikasi email</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">Notifikasi surat terbaru</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_send_whatsapp">key_send_whatsapp</string>
    <string name="key_version">key_version</string>
    <string name="key_riwayat_dev">key_riwayat_dev</string>
    <string name="key_faq">key_faq</string>
    <string name="title_download_book">Unduh Panduan</string>
    <string name="url_download_book">http://eletter.kebumenkab.go.id/panduan/02_Android_Panduan_Pengguna_e_Letter.pdf</string>
    <string name="title_logout">Keluar (Log out)</string>
    <string name="title_logout_message">Menghapus sesi login Anda.</string>
    <string name="title_profil">Profil</string>
    <string name="title_profil_message">Melihat profil Anda.</string>
</resources>