<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="id.go.kebumenkab.eletterkebumen.activity.pns.DetailKonsep">

    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/action_reload"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_tarik"
        android:orderInCategory="101"
        android:title="@string/action_tarik"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="102"
        android:title="@string/action_delete"
        app:showAsAction="always|withText" />

</menu>
