<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="id.go.kebumenkab.eletterkebumen.activity.pns.DetailKonsep">

    <item
        android:id="@+id/action_koreksi"
        android:orderInCategory="100"
        android:title="@string/action_koreksi"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_tandai"
        android:orderInCategory="101"
        android:title="@string/action_tandatangani"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_kirim"
        android:orderInCategory="102"
        android:title="@string/action_kirim"
        app:showAsAction="always|withText" />
</menu>
