<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext="id.go.kebumenkab.eletterkebumen.activity.pns.DetailKonsep">

    <item
        android:id="@+id/action_tandai"
        android:orderInCategory="100"
        android:title="@string/action_tandai"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_setuju"
        android:orderInCategory="100"
        android:title="@string/action_beritandatangan"
        app:showAsAction="always"
         />

    <item
        android:id="@+id/action_koreksi"
        android:orderInCategory="100"
        android:title="@string/action_koreksi"
        app:showAsAction="always"
        />
</menu>
